Calculator design almost done (footer required)

--- a/calculadora-igor/index.html
+++ b/calculadora-igor/index.html
@@ -6,40 +6,44 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header class="header_h1">
         <h1>Calculadora</h1>
     </header>
-
-    <div class="calculadora">
-        <div class="resultado">Resultado</div>
-        <div class="calculadora-botoes">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
+    <div class="container">
+        <div class="calculadora">
+            <div class="resultado">Resultado</div>
+            <div class="calculadora-botoes">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>+</button>
+            </div>
+            <div class="calculadora-botoes">
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>-</button>
+            </div>
+            <div class="calculadora-botoes">
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>*</button>
+            </div>
+            <div class="calculadora-botoes">
+                <button>.</button>
+                <button>0</button>
+                <button>=</button>
+                <button>/</button>
+            </div>
         </div>
-        <div class="calculadora-botoes">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
-        </div>
-        <div class="calculadora-botoes">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>*</button>
-        </div>
-        <div class="calculadora-botoes">
-            <button>.</button>
-            <button>0</button>
-            <button>=</button>
-            <button>/</button>
-        </div>
+    </div>
+    <div class="rodapé">
+        <h2>Todos direitos reservados. 2024 Igor Felipe Viana.</h2>
     </div>
 
 </body>
