--- a/Calculator-Chrys/index.html
+++ b/Calculator-Chrys/index.html
@@ -14,8 +14,44 @@
   </head>
   <body>
     <div class="header"><h1>Calculator</h1></div>
+
+    
+    <div class="calculator"></div>
+    <div class="calculatorFrame">
+        <button class="zero">0</button>
+        <button class="dot">.</button>
+        <button class="equal">=</button>
+        <button class="plus">+</button>
+        <button class="one">1</button>
+        <button class="two">2</button>
+        <button class="three">3</button>
+        <button class="minus">-</button>
+        <button class="four">4</button>
+        <button class="five">5</button>
+        <button class="six">6</button>
+        <button class="divide">/</button>
+        <button class="seven">7</button>
+        <button class="eight">8</button>
+        <button class="nine">9</button>
+        <button class="times">X</button>
+    </div>
+
+
+
+
+
+
+
+    <div class="answer"></div>
+
+
+
+    
+
     <div class="balls"></div>
     <div class="balls2"></div>
+
+
 
   </body>
 </html>
